--- a/assets/sass/_icons.scss
+++ b/assets/sass/_icons.scss
@@ -1,8 +1,9 @@
 .menu_icon {
-    width: 32px;
+    width: 22px;
     height: 32px;
     color: $font-color;
-    margin-right: 0.5rem;
+    margin-right: 0.8rem;
+    align-self: self-start;
 
     i {
         line-height: 32px;
@@ -15,20 +16,19 @@
     display: block;
     font-size: 2rem;
 
-    @media (min-width: 768px) {
+    @media (min-width: 769px) {
         display: none;
     }
 }
 
 .toggle_menu {
-    i:active {
-        color: $nav-hover-color;
-    }
+    width: 32px;
+    height: 32px;
 }
 
 .close_menu {
     margin: 1rem 1rem 1rem auto;
-    padding-top: 4.5px;
+    padding-top: 7px;
     width: 32px;
     height: 32px;
 }
