--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -5,8 +5,13 @@ nav {
     height: 5rem;
     padding: 0 1rem;
     margin: 0 auto;
+    max-width: 1400px;
+    z-index: 999;
 
     .logo {
+        z-index: 1;
+        background-color: $header-color;
+
         a {
             font-size: 1.75rem;
             font-weight: 700;
@@ -34,12 +39,12 @@ nav {
                 visibility: hidden;
                 opacity: 0;
 
-                @media screen and (max-width: 992px) {
+                @media screen and (max-width: 993px) {
                     justify-content: start;
                     flex-wrap: wrap;
                 }
 
-                @media screen and (max-width: 768px) {
+                @media screen and (max-width: 769px) {
                     flex-direction: column;
                     position: static;
                     box-shadow: none;
@@ -47,17 +52,15 @@ nav {
                     height: 0;
                     max-width: 350px;
                     overflow: hidden;
+                    margin-top: 1rem;
                 }
 
                 .content {
                     display: flex;
                     flex-direction: column;
-                    padding: 1rem 1rem;
 
-                    .header_megamenu {
-                        font-weight: 600;
-                        color: $black-25;
-                        margin-bottom: 1rem;
+                    @media (min-width: 769px) {
+                        padding: 1rem 1rem;
                     }
 
                     .megamenu_item {
@@ -103,7 +106,7 @@ nav {
                 align-items: center;
             }
 
-            @media (min-width: 768px) {
+            @media (min-width: 769px) {
                 margin: 0 1.5rem;
                 padding: 1.4rem 0;
             }
@@ -114,12 +117,12 @@ nav {
             transition: all 0.3s ease;
             opacity: 1;
 
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 769px) {
                 height: 100%;
             }
         }
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 769px) {
             position: absolute;
             height: 100vh;
             width: 100%;
@@ -132,17 +135,12 @@ nav {
             transition: 0.3s;
         }
 
-        @media (min-width: 768px) {
+        @media (min-width: 769px) {
             display: flex;
         }
     }
 
     .show_menu {
         left: 0;
-    }
-
-    @media (min-width: 768px) {
-        max-width: 1400px;
-        z-index: 999;
     }
 }
